--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,6 @@ $navbar-height: 80px;
       background-position: 50%;
       background-repeat: no-repeat;
 
-
         &.wide {
           position: fixed;
           top: 0;
@@ -75,6 +74,10 @@ $navbar-height: 80px;
           width: auto;
           height: auto;
           border-radius: 0;
+      }
+
+      &:active {
+        opacity: 0.7;
       }
     }
 
@@ -115,6 +118,12 @@ $navbar-height: 80px;
         font-size: 40px;
         cursor: pointer;
       }
+
+      &:active {
+        &:after {
+          background: rgba(0, 0, 0, 0.7);
+        }
+      }
     }
   }
 
@@ -122,7 +131,7 @@ $navbar-height: 80px;
     margin: 20px auto;
     background: white;
     padding: 4px;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 
     .image {
       width: 100%;
@@ -144,7 +153,104 @@ $navbar-height: 80px;
   }
 }
 
-@keyframes fade-in {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+.new-meal-page {
+  input {
+    border: none;
+    font-size: 18px;
+    padding: 20px;
+    background: white;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    width: 100%;
+    font-family: 'Rubik', sans-serif;
+    margin-bottom: 10px;
+  }
+
+  .field {
+    margin: 20px 0;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    padding: 4px;
+    background: white;
+
+    .label {
+      text-align: right;
+      padding: 10px 20px;
+      border-bottom: 1px solid #ccc;
+      margin-bottom: 10px;
+    }
+
+    .ingredients-container {
+      .list {
+        .ingredient-item {
+          display: flex;
+          height: 40px;
+          position: relative;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+
+          .name {
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+
+          .v-icon {
+            background-image: url(https://lh3.googleusercontent.com/proxy/PV7mXRjKUowIJgDADka2ptwNv2_qdgDS9VLxSrmu3DuEtOMrI8R1wo4AJc9b2qvd3Uqg_KSxl22UdCx7BtRF3KQaeTMz3TisoOAoxqlWC_PbSDjoSSGXKuxlhOlL4xqn26jSlwe4HrB6EhDhClKb27g);
+            background-size: 100%;
+            width: 22px;
+            height: 22px;
+            opacity: 0.5;
+            margin-right: 10px;
+          }
+
+          .left-side {
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .quantity {
+              border-right: 1px solid #ccc;
+              width: 50px;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+
+            .remove-button {
+              background-image: url(https://iconsplace.com/wp-content/uploads/_icons/ff0000/256/png/trash-icon-14-256.png);
+              background-size: 100%;
+              width: 22px;
+              height: 22px;
+              opacity: 0.5;
+              margin: 0 10px;
+            }
+          }
+        }
+      }
+
+      .empty-list {
+        line-height: 70px;
+      }
+    }
+
+  }
+
+  .add-ingredient-button {
+    margin: 10px 0;
+    width: 100%;
+    line-height: 40px;
+    background: #007bff;
+    color: white;
+    font-size: 18px;
+
+    &:active {
+      background: #007bffb8
+    }
+  }
 }
