Add firebase configuration

--- a/src/App.scss
+++ b/src/App.scss
@@ -60,7 +60,7 @@ $navbar-height: 80px;
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background-image: url(/yuval.jpg);
+      background-image: url(/yuval.JPG);
       background-size: 180%;
       background-position: 50%;
       background-repeat: no-repeat;
@@ -98,7 +98,7 @@ $navbar-height: 80px;
     .background {
       height: 120px;
       background: white;
-      background-image: url(/food.jpg);
+      background-image: url(/food.JPG);
       background-size: 100%;
       background-position: 0;
       position: relative;
