--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,8 @@ $main-color: #007bff;
       left: 0;
       right: 0;
       background: rgba(0, 0, 0, 0.9);
+      animation: fade-in 0.3s ease-in-out forwards;
+      margin-right: -1px;
     }
 
     .profile {
@@ -65,16 +67,16 @@ $main-color: #007bff;
       background-size: 180%;
       background-position: 50%;
       background-repeat: no-repeat;
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      transition: all 0.3s ease-in-out;
 
         &.wide {
-          position: fixed;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          width: auto;
-          height: auto;
+          width: 100%;
+          height: 100%;
           border-radius: 0;
+          margin-right: -10px;
       }
 
       &:active {
@@ -258,5 +260,14 @@ $main-color: #007bff;
     &:active {
       background: #007bffb8
     }
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
