Add first connection to the database

--- a/src/App.scss
+++ b/src/App.scss
@@ -135,6 +135,7 @@ $main-color: #007bff;
     background: white;
     padding: 4px;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    animation: fade-in 0.3s ease-in-out;
 
     .image {
       width: 100%;
