--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ $main-color: #007bff;
   .page {
     padding: 0 10px;
     padding-top: $navbar-height + 20px;
+    padding-bottom: 30px;
     position: absolute;
     top: 0;
     left: 0;
@@ -266,7 +267,24 @@ $main-color: #007bff;
 
   }
 
-  .add-ingredient-button {
+  .image-placeholder {
+    height: 200px;
+    border: 1px dashed #777;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 20px 0;
+
+    .icon {
+      font-size: 40px;
+    }
+  }
+
+  .secondary-button,
+  .submit-button {
     margin: 10px 0;
     width: 100%;
     line-height: 40px;
@@ -277,6 +295,11 @@ $main-color: #007bff;
     &:active {
       background: #007bffb8
     }
+  }
+
+
+  .submit-button {
+    line-height: 60px;
   }
 }
 
