--- a/src/App.scss
+++ b/src/App.scss
@@ -276,7 +276,7 @@ $main-color: #007bff;
   }
 
   .image-placeholder {
-    height: 200px;
+    height: 300px;
     border: 1px dashed #777;
     display: flex;
     flex-direction: column;
@@ -332,10 +332,19 @@ $main-color: #007bff;
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+
+  &.visible {
+    opacity: 1;
+    pointer-events: auto;
+  }
 
   .box {
     background: rgba(0, 0, 0, 0.6);
