--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -155,6 +155,21 @@ $main-color: #007bff;
         color: #777;
       }
     }
+
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 20px;
+      color: $main-color;
+      border-top: 1px solid #ccc;
+
+      .button {
+        width: 70px;
+        margin: 0 10px;
+        line-height: 50px;
+      }
+    }
   }
 }
 
@@ -351,6 +366,59 @@ $main-color: #007bff;
     width: 200px;
     color: white;
     border-radius: 20px;
+  }
+}
+
+.remove-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease-in-out;
+
+  &.visible {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .message {
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 25px;
+    border-radius: 10px;
+    width: 300px;
+    padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .content {
+      margin-bottom: 40px;
+    }
+
+    .controls {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+
+      .button {
+        width: 130px;
+        font-size: 25px;
+        line-height: 40px;
+        border: 2px solid white;
+        background: $main-color;
+      }
+    }
   }
 }
 
