--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -174,6 +174,10 @@ $main-color: #007bff;
         width: 70px;
         margin: 0 10px;
         line-height: 50px;
+
+        &:active {
+          opacity: 0.5;
+        }
       }
     }
   }
@@ -423,6 +427,10 @@ $main-color: #007bff;
         line-height: 40px;
         border: 2px solid white;
         background: $main-color;
+
+        &:active {
+          opacity: 0.5;
+        }
       }
     }
   }
