Fix bug of click on remove button (opened the meal ingredients)

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -421,6 +421,7 @@ $main-color: #007bff;
 
     .content {
       margin-bottom: 40px;
+      font-size: 20px;
     }
 
     .controls {
@@ -432,7 +433,7 @@ $main-color: #007bff;
       .button {
         width: 130px;
         font-size: 25px;
-        line-height: 40px;
+        line-height: 35px;
         border: 2px solid white;
         background: $main-color;
 
