--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,6 @@
 $navbar-height: 80px;
 $main-color: #007bff;
+$tag-background-color: #005abb;
 
 .App {
   text-align: center;
@@ -99,6 +100,42 @@ $main-color: #007bff;
       &:active {
         opacity: 0.7;
       }
+    }
+  }
+
+  .sort-button {
+    position: fixed;
+    bottom: 60px;
+    left: 20px;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    background-color: #f48fb1;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+
+    &:active {
+      opacity: 0.7;
+    }
+
+    .filters-counter {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      top: -8px;
+      left: -8px;
+      background: $main-color;
+      font-size: 15px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -228,22 +265,6 @@ $main-color: #007bff;
     display: block;
   }
 
-  .separator {
-    font-size: 40px;
-    margin: 20px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &:before, &:after {
-      content: '';
-      width: 100px;
-      height: 1px;
-      background: #777;
-      margin: 20px;
-    }
-  }
-
   .field {
     margin: 20px 0;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
@@ -286,6 +307,22 @@ $main-color: #007bff;
 
   .submit-button {
     line-height: 60px;
+  }
+}
+
+.separator {
+  font-size: 40px;
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:before, &:after {
+    content: '';
+    width: 100px;
+    height: 1px;
+    background: #777;
+    margin: 20px;
   }
 }
 
@@ -360,6 +397,11 @@ $main-color: #007bff;
   .empty-list {
     line-height: 70px;
   }
+}
+
+.empty-meals-list {
+  line-height: 120px;
+  font-size: 30px;
 }
 
 .loading-container {
@@ -487,7 +529,7 @@ $main-color: #007bff;
 
   .tag {
     font-size: 20px;
-    background: #005abb;
+    background: $tag-background-color;
     color: white;
     display: flex;
     text-align: center;
@@ -498,13 +540,76 @@ $main-color: #007bff;
     border: 2px solid transparent;
 
     &.selected {
-      border: 2px solid #005abb;
-      color: #005abb;
+      border: 2px solid $tag-background-color;
+      color: $tag-background-color;
       background: white;
     }
 
     &:active {
       opacity: 0.5;
+    }
+  }
+}
+
+.filters-page {
+  .or-and-chooser {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .button {
+      width: 100px;
+      background-color: $tag-background-color;
+      color: white;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 23px;
+
+      &.selected {
+        background-color: white;
+        color: $tag-background-color;
+        border: 2px solid $tag-background-color;
+      }
+
+      &:first-child {
+        border-radius: 0 5px 5px 0;
+      }
+
+      &:last-child {
+        border-radius: 5px 0 0 5px;
+      }
+
+      &:active {
+        opacity: 0.5;
+      }
+    }
+  }
+
+  .controls {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid $main-color;
+      border-radius: 5px;
+      background-color: white;
+      color: $main-color;
+      height: 40px;
+      margin-bottom: 10px;
+      font-size: 22px;
+      width: 200px;
+
+      &:active {
+        opacity: 0.5;
+      }
     }
   }
 }
